Ummm, it works. Now we only need to implement GUI (Yaay)